trunk/Spring 2009 notes/Crafting Compilers (5531)/Project 3/parser.out
Created by PLY version 3.3 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> program
Rule 1     program -> declList
Rule 2     declList -> decl
Rule 3     declList -> decl declList
Rule 4     decl -> varDecl
Rule 5     decl -> funDecl
Rule 6     varDecl -> typeSpecifier IDENTIFIER LBRACKET INT_LITERAL RBRACKET SEMICOLON
Rule 7     varDecl -> typeSpecifier IDENTIFIER SEMICOLON
Rule 8     typeSpecifier -> INT
Rule 9     typeSpecifier -> CHAR
Rule 10    typeSpecifier -> VOID
Rule 11    typeSpecifier -> STRING
Rule 12    funDecl -> typeSpecifier IDENTIFIER LPAREN formalDeclList RPAREN funBody
Rule 13    formalDeclList -> empty
Rule 14    formalDeclList -> formalDecl
Rule 15    formalDeclList -> formalDecl COMMA formalDeclList
Rule 16    formalDecl -> typeSpecifier IDENTIFIER
Rule 17    formalDecl -> typeSpecifier IDENTIFIER LBRACKET RBRACKET
Rule 18    funBody -> LBRACE localDeclList statementList RBRACE
Rule 19    localDeclList -> empty
Rule 20    localDeclList -> varDecl localDeclList
Rule 21    statementList -> empty
Rule 22    statementList -> statement statementList
Rule 23    statement -> compoundStmt
Rule 24    statement -> assignStmt
Rule 25    statement -> condStmt
Rule 26    statement -> loopStmt
Rule 27    statement -> returnStmt
Rule 28    compoundStmt -> LBRACE statementList RBRACE
Rule 29    assignStmt -> var ASSIGN expression SEMICOLON
Rule 30    assignStmt -> expression SEMICOLON
Rule 31    condStmt -> IF LPAREN expression RPAREN statement
Rule 32    condStmt -> ELSE statement
Rule 33    loopStmt -> WHILE LPAREN expression RPAREN statement
Rule 34    returnStmt -> RETURN SEMICOLON
Rule 35    returnStmt -> RETURN expression SEMICOLON
Rule 36    var -> IDENTIFIER
Rule 37    var -> IDENTIFIER LBRACKET addExpr RBRACKET
Rule 38    expression -> addExpr
Rule 39    expression -> expression relop addExpr
Rule 40    relop -> LTE
Rule 41    relop -> LESS
Rule 42    relop -> EQ
Rule 43    relop -> GREATER
Rule 44    relop -> GTE
Rule 45    relop -> NEQ
Rule 46    addExpr -> term
Rule 47    addExpr -> addExpr addop term
Rule 48    addop -> PLUS
Rule 49    addop -> MINUS
Rule 50    term -> factor
Rule 51    term -> term mulop factor
Rule 52    mulop -> MULTIPLY
Rule 53    mulop -> DIVIDE
Rule 54    factor -> LPAREN expression RPAREN
Rule 55    factor -> var
Rule 56    factor -> funcCallExpr
Rule 57    factor -> INT_LITERAL
Rule 58    factor -> CHAR_LITERAL
Rule 59    factor -> STRING_LITERAL
Rule 60    funcCallExpr -> IDENTIFIER LPAREN argList RPAREN
Rule 61    argList -> empty
Rule 62    argList -> expression
Rule 63    argList -> expression COMMA argList
Rule 64    empty -> <empty>

Terminals, with rules where they appear

ASSIGN               : 29
CHAR                 : 9
CHAR_LITERAL         : 58
COMMA                : 15 63
DIVIDE               : 53
ELSE                 : 32
EQ                   : 42
GREATER              : 43
GTE                  : 44
IDENTIFIER           : 6 7 12 16 17 36 37 60
IF                   : 31
INT                  : 8
INT_LITERAL          : 6 57
LBRACE               : 18 28
LBRACKET             : 6 17 37
LESS                 : 41
LPAREN               : 12 31 33 54 60
LTE                  : 40
MINUS                : 49
MULTIPLY             : 52
NEQ                  : 45
PLUS                 : 48
RBRACE               : 18 28
RBRACKET             : 6 17 37
RETURN               : 34 35
RPAREN               : 12 31 33 54 60
SEMICOLON            : 6 7 29 30 34 35
STRING               : 11
STRING_LITERAL       : 59
VOID                 : 10
WHILE                : 33
error                : 

Nonterminals, with rules where they appear

addExpr              : 37 38 39 47
addop                : 47
argList              : 60 63
assignStmt           : 24
compoundStmt         : 23
condStmt             : 25
decl                 : 2 3
declList             : 1 3
empty                : 13 19 21 61
expression           : 29 30 31 33 35 39 54 62 63
factor               : 50 51
formalDecl           : 14 15
formalDeclList       : 12 15
funBody              : 12
funDecl              : 5
funcCallExpr         : 56
localDeclList        : 18 20
loopStmt             : 26
mulop                : 51
program              : 0
relop                : 39
returnStmt           : 27
statement            : 22 31 32 33
statementList        : 18 22 28
term                 : 46 47 51
typeSpecifier        : 6 7 12 16 17
var                  : 29 55
varDecl              : 4 20

Parsing method: LALR

state 0

    (0) S' -> . program
    (1) program -> . declList
    (2) declList -> . decl
    (3) declList -> . decl declList
    (4) decl -> . varDecl
    (5) decl -> . funDecl
    (6) varDecl -> . typeSpecifier IDENTIFIER LBRACKET INT_LITERAL RBRACKET SEMICOLON
    (7) varDecl -> . typeSpecifier IDENTIFIER SEMICOLON
    (12) funDecl -> . typeSpecifier IDENTIFIER LPAREN formalDeclList RPAREN funBody
    (8) typeSpecifier -> . INT
    (9) typeSpecifier -> . CHAR
    (10) typeSpecifier -> . VOID
    (11) typeSpecifier -> . STRING

    INT             shift and go to state 5
    CHAR            shift and go to state 2
    VOID            shift and go to state 7
    STRING          shift and go to state 4

    decl                           shift and go to state 1
    declList                       shift and go to state 3
    funDecl                        shift and go to state 6
    varDecl                        shift and go to state 8
    program                        shift and go to state 9
    typeSpecifier                  shift and go to state 10

state 1

    (2) declList -> decl .
    (3) declList -> decl . declList
    (2) declList -> . decl
    (3) declList -> . decl declList
    (4) decl -> . varDecl
    (5) decl -> . funDecl
    (6) varDecl -> . typeSpecifier IDENTIFIER LBRACKET INT_LITERAL RBRACKET SEMICOLON
    (7) varDecl -> . typeSpecifier IDENTIFIER SEMICOLON
    (12) funDecl -> . typeSpecifier IDENTIFIER LPAREN formalDeclList RPAREN funBody
    (8) typeSpecifier -> . INT
    (9) typeSpecifier -> . CHAR
    (10) typeSpecifier -> . VOID
    (11) typeSpecifier -> . STRING

    $end            reduce using rule 2 (declList -> decl .)
    INT             shift and go to state 5
    CHAR            shift and go to state 2
    VOID            shift and go to state 7
    STRING          shift and go to state 4

    decl                           shift and go to state 1
    declList                       shift and go to state 11
    funDecl                        shift and go to state 6
    varDecl                        shift and go to state 8
    typeSpecifier                  shift and go to state 10

state 2

    (9) typeSpecifier -> CHAR .

    IDENTIFIER      reduce using rule 9 (typeSpecifier -> CHAR .)


state 3

    (1) program -> declList .

    $end            reduce using rule 1 (program -> declList .)


state 4

    (11) typeSpecifier -> STRING .

    IDENTIFIER      reduce using rule 11 (typeSpecifier -> STRING .)


state 5

    (8) typeSpecifier -> INT .

    IDENTIFIER      reduce using rule 8 (typeSpecifier -> INT .)


state 6

    (5) decl -> funDecl .

    INT             reduce using rule 5 (decl -> funDecl .)
    CHAR            reduce using rule 5 (decl -> funDecl .)
    VOID            reduce using rule 5 (decl -> funDecl .)
    STRING          reduce using rule 5 (decl -> funDecl .)
    $end            reduce using rule 5 (decl -> funDecl .)


state 7

    (10) typeSpecifier -> VOID .

    IDENTIFIER      reduce using rule 10 (typeSpecifier -> VOID .)


state 8

    (4) decl -> varDecl .

    INT             reduce using rule 4 (decl -> varDecl .)
    CHAR            reduce using rule 4 (decl -> varDecl .)
    VOID            reduce using rule 4 (decl -> varDecl .)
    STRING          reduce using rule 4 (decl -> varDecl .)
    $end            reduce using rule 4 (decl -> varDecl .)


state 9

    (0) S' -> program .



state 10

    (6) varDecl -> typeSpecifier . IDENTIFIER LBRACKET INT_LITERAL RBRACKET SEMICOLON
    (7) varDecl -> typeSpecifier . IDENTIFIER SEMICOLON
    (12) funDecl -> typeSpecifier . IDENTIFIER LPAREN formalDeclList RPAREN funBody

    IDENTIFIER      shift and go to state 12


state 11

    (3) declList -> decl declList .

    $end            reduce using rule 3 (declList -> decl declList .)


state 12

    (6) varDecl -> typeSpecifier IDENTIFIER . LBRACKET INT_LITERAL RBRACKET SEMICOLON
    (7) varDecl -> typeSpecifier IDENTIFIER . SEMICOLON
    (12) funDecl -> typeSpecifier IDENTIFIER . LPAREN formalDeclList RPAREN funBody

    LBRACKET        shift and go to state 14
    SEMICOLON       shift and go to state 13
    LPAREN          shift and go to state 15


state 13

    (7) varDecl -> typeSpecifier IDENTIFIER SEMICOLON .

    INT             reduce using rule 7 (varDecl -> typeSpecifier IDENTIFIER SEMICOLON .)
    CHAR            reduce using rule 7 (varDecl -> typeSpecifier IDENTIFIER SEMICOLON .)
    VOID            reduce using rule 7 (varDecl -> typeSpecifier IDENTIFIER SEMICOLON .)
    STRING          reduce using rule 7 (varDecl -> typeSpecifier IDENTIFIER SEMICOLON .)
    $end            reduce using rule 7 (varDecl -> typeSpecifier IDENTIFIER SEMICOLON .)
    LBRACE          reduce using rule 7 (varDecl -> typeSpecifier IDENTIFIER SEMICOLON .)
    IF              reduce using rule 7 (varDecl -> typeSpecifier IDENTIFIER SEMICOLON .)
    ELSE            reduce using rule 7 (varDecl -> typeSpecifier IDENTIFIER SEMICOLON .)
    WHILE           reduce using rule 7 (varDecl -> typeSpecifier IDENTIFIER SEMICOLON .)
    RETURN          reduce using rule 7 (varDecl -> typeSpecifier IDENTIFIER SEMICOLON .)
    IDENTIFIER      reduce using rule 7 (varDecl -> typeSpecifier IDENTIFIER SEMICOLON .)
    LPAREN          reduce using rule 7 (varDecl -> typeSpecifier IDENTIFIER SEMICOLON .)
    INT_LITERAL     reduce using rule 7 (varDecl -> typeSpecifier IDENTIFIER SEMICOLON .)
    CHAR_LITERAL    reduce using rule 7 (varDecl -> typeSpecifier IDENTIFIER SEMICOLON .)
    STRING_LITERAL  reduce using rule 7 (varDecl -> typeSpecifier IDENTIFIER SEMICOLON .)
    RBRACE          reduce using rule 7 (varDecl -> typeSpecifier IDENTIFIER SEMICOLON .)


state 14

    (6) varDecl -> typeSpecifier IDENTIFIER LBRACKET . INT_LITERAL RBRACKET SEMICOLON

    INT_LITERAL     shift and go to state 16


state 15

    (12) funDecl -> typeSpecifier IDENTIFIER LPAREN . formalDeclList RPAREN funBody
    (13) formalDeclList -> . empty
    (14) formalDeclList -> . formalDecl
    (15) formalDeclList -> . formalDecl COMMA formalDeclList
    (64) empty -> .
    (16) formalDecl -> . typeSpecifier IDENTIFIER
    (17) formalDecl -> . typeSpecifier IDENTIFIER LBRACKET RBRACKET
    (8) typeSpecifier -> . INT
    (9) typeSpecifier -> . CHAR
    (10) typeSpecifier -> . VOID
    (11) typeSpecifier -> . STRING

    RPAREN          reduce using rule 64 (empty -> .)
    INT             shift and go to state 5
    CHAR            shift and go to state 2
    VOID            shift and go to state 7
    STRING          shift and go to state 4

    formalDeclList                 shift and go to state 17
    typeSpecifier                  shift and go to state 19
    empty                          shift and go to state 20
    formalDecl                     shift and go to state 18

state 16

    (6) varDecl -> typeSpecifier IDENTIFIER LBRACKET INT_LITERAL . RBRACKET SEMICOLON

    RBRACKET        shift and go to state 21


state 17

    (12) funDecl -> typeSpecifier IDENTIFIER LPAREN formalDeclList . RPAREN funBody

    RPAREN          shift and go to state 22


state 18

    (14) formalDeclList -> formalDecl .
    (15) formalDeclList -> formalDecl . COMMA formalDeclList

    RPAREN          reduce using rule 14 (formalDeclList -> formalDecl .)
    COMMA           shift and go to state 23


state 19

    (16) formalDecl -> typeSpecifier . IDENTIFIER
    (17) formalDecl -> typeSpecifier . IDENTIFIER LBRACKET RBRACKET

    IDENTIFIER      shift and go to state 24


state 20

    (13) formalDeclList -> empty .

    RPAREN          reduce using rule 13 (formalDeclList -> empty .)


state 21

    (6) varDecl -> typeSpecifier IDENTIFIER LBRACKET INT_LITERAL RBRACKET . SEMICOLON

    SEMICOLON       shift and go to state 25


state 22

    (12) funDecl -> typeSpecifier IDENTIFIER LPAREN formalDeclList RPAREN . funBody
    (18) funBody -> . LBRACE localDeclList statementList RBRACE

    LBRACE          shift and go to state 26

    funBody                        shift and go to state 27

state 23

    (15) formalDeclList -> formalDecl COMMA . formalDeclList
    (13) formalDeclList -> . empty
    (14) formalDeclList -> . formalDecl
    (15) formalDeclList -> . formalDecl COMMA formalDeclList
    (64) empty -> .
    (16) formalDecl -> . typeSpecifier IDENTIFIER
    (17) formalDecl -> . typeSpecifier IDENTIFIER LBRACKET RBRACKET
    (8) typeSpecifier -> . INT
    (9) typeSpecifier -> . CHAR
    (10) typeSpecifier -> . VOID
    (11) typeSpecifier -> . STRING

    RPAREN          reduce using rule 64 (empty -> .)
    INT             shift and go to state 5
    CHAR            shift and go to state 2
    VOID            shift and go to state 7
    STRING          shift and go to state 4

    formalDeclList                 shift and go to state 28
    typeSpecifier                  shift and go to state 19
    empty                          shift and go to state 20
    formalDecl                     shift and go to state 18

state 24

    (16) formalDecl -> typeSpecifier IDENTIFIER .
    (17) formalDecl -> typeSpecifier IDENTIFIER . LBRACKET RBRACKET

    COMMA           reduce using rule 16 (formalDecl -> typeSpecifier IDENTIFIER .)
    RPAREN          reduce using rule 16 (formalDecl -> typeSpecifier IDENTIFIER .)
    LBRACKET        shift and go to state 29


state 25

    (6) varDecl -> typeSpecifier IDENTIFIER LBRACKET INT_LITERAL RBRACKET SEMICOLON .

    INT             reduce using rule 6 (varDecl -> typeSpecifier IDENTIFIER LBRACKET INT_LITERAL RBRACKET SEMICOLON .)
    CHAR            reduce using rule 6 (varDecl -> typeSpecifier IDENTIFIER LBRACKET INT_LITERAL RBRACKET SEMICOLON .)
    VOID            reduce using rule 6 (varDecl -> typeSpecifier IDENTIFIER LBRACKET INT_LITERAL RBRACKET SEMICOLON .)
    STRING          reduce using rule 6 (varDecl -> typeSpecifier IDENTIFIER LBRACKET INT_LITERAL RBRACKET SEMICOLON .)
    $end            reduce using rule 6 (varDecl -> typeSpecifier IDENTIFIER LBRACKET INT_LITERAL RBRACKET SEMICOLON .)
    LBRACE          reduce using rule 6 (varDecl -> typeSpecifier IDENTIFIER LBRACKET INT_LITERAL RBRACKET SEMICOLON .)
    IF              reduce using rule 6 (varDecl -> typeSpecifier IDENTIFIER LBRACKET INT_LITERAL RBRACKET SEMICOLON .)
    ELSE            reduce using rule 6 (varDecl -> typeSpecifier IDENTIFIER LBRACKET INT_LITERAL RBRACKET SEMICOLON .)
    WHILE           reduce using rule 6 (varDecl -> typeSpecifier IDENTIFIER LBRACKET INT_LITERAL RBRACKET SEMICOLON .)
    RETURN          reduce using rule 6 (varDecl -> typeSpecifier IDENTIFIER LBRACKET INT_LITERAL RBRACKET SEMICOLON .)
    IDENTIFIER      reduce using rule 6 (varDecl -> typeSpecifier IDENTIFIER LBRACKET INT_LITERAL RBRACKET SEMICOLON .)
    LPAREN          reduce using rule 6 (varDecl -> typeSpecifier IDENTIFIER LBRACKET INT_LITERAL RBRACKET SEMICOLON .)
    INT_LITERAL     reduce using rule 6 (varDecl -> typeSpecifier IDENTIFIER LBRACKET INT_LITERAL RBRACKET SEMICOLON .)
    CHAR_LITERAL    reduce using rule 6 (varDecl -> typeSpecifier IDENTIFIER LBRACKET INT_LITERAL RBRACKET SEMICOLON .)
    STRING_LITERAL  reduce using rule 6 (varDecl -> typeSpecifier IDENTIFIER LBRACKET INT_LITERAL RBRACKET SEMICOLON .)
    RBRACE          reduce using rule 6 (varDecl -> typeSpecifier IDENTIFIER LBRACKET INT_LITERAL RBRACKET SEMICOLON .)


state 26

    (18) funBody -> LBRACE . localDeclList statementList RBRACE
    (19) localDeclList -> . empty
    (20) localDeclList -> . varDecl localDeclList
    (64) empty -> .
    (6) varDecl -> . typeSpecifier IDENTIFIER LBRACKET INT_LITERAL RBRACKET SEMICOLON
    (7) varDecl -> . typeSpecifier IDENTIFIER SEMICOLON
    (8) typeSpecifier -> . INT
    (9) typeSpecifier -> . CHAR
    (10) typeSpecifier -> . VOID
    (11) typeSpecifier -> . STRING

    LBRACE          reduce using rule 64 (empty -> .)
    IF              reduce using rule 64 (empty -> .)
    ELSE            reduce using rule 64 (empty -> .)
    WHILE           reduce using rule 64 (empty -> .)
    RETURN          reduce using rule 64 (empty -> .)
    IDENTIFIER      reduce using rule 64 (empty -> .)
    LPAREN          reduce using rule 64 (empty -> .)
    INT_LITERAL     reduce using rule 64 (empty -> .)
    CHAR_LITERAL    reduce using rule 64 (empty -> .)
    STRING_LITERAL  reduce using rule 64 (empty -> .)
    RBRACE          reduce using rule 64 (empty -> .)
    INT             shift and go to state 5
    CHAR            shift and go to state 2
    VOID            shift and go to state 7
    STRING          shift and go to state 4

    localDeclList                  shift and go to state 30
    varDecl                        shift and go to state 31
    empty                          shift and go to state 33
    typeSpecifier                  shift and go to state 32

state 27

    (12) funDecl -> typeSpecifier IDENTIFIER LPAREN formalDeclList RPAREN funBody .

    INT             reduce using rule 12 (funDecl -> typeSpecifier IDENTIFIER LPAREN formalDeclList RPAREN funBody .)
    CHAR            reduce using rule 12 (funDecl -> typeSpecifier IDENTIFIER LPAREN formalDeclList RPAREN funBody .)
    VOID            reduce using rule 12 (funDecl -> typeSpecifier IDENTIFIER LPAREN formalDeclList RPAREN funBody .)
    STRING          reduce using rule 12 (funDecl -> typeSpecifier IDENTIFIER LPAREN formalDeclList RPAREN funBody .)
    $end            reduce using rule 12 (funDecl -> typeSpecifier IDENTIFIER LPAREN formalDeclList RPAREN funBody .)


state 28

    (15) formalDeclList -> formalDecl COMMA formalDeclList .

    RPAREN          reduce using rule 15 (formalDeclList -> formalDecl COMMA formalDeclList .)


state 29

    (17) formalDecl -> typeSpecifier IDENTIFIER LBRACKET . RBRACKET

    RBRACKET        shift and go to state 34


state 30

    (18) funBody -> LBRACE localDeclList . statementList RBRACE
    (21) statementList -> . empty
    (22) statementList -> . statement statementList
    (64) empty -> .
    (23) statement -> . compoundStmt
    (24) statement -> . assignStmt
    (25) statement -> . condStmt
    (26) statement -> . loopStmt
    (27) statement -> . returnStmt
    (28) compoundStmt -> . LBRACE statementList RBRACE
    (29) assignStmt -> . var ASSIGN expression SEMICOLON
    (30) assignStmt -> . expression SEMICOLON
    (31) condStmt -> . IF LPAREN expression RPAREN statement
    (32) condStmt -> . ELSE statement
    (33) loopStmt -> . WHILE LPAREN expression RPAREN statement
    (34) returnStmt -> . RETURN SEMICOLON
    (35) returnStmt -> . RETURN expression SEMICOLON
    (36) var -> . IDENTIFIER
    (37) var -> . IDENTIFIER LBRACKET addExpr RBRACKET
    (38) expression -> . addExpr
    (39) expression -> . expression relop addExpr
    (46) addExpr -> . term
    (47) addExpr -> . addExpr addop term
    (50) term -> . factor
    (51) term -> . term mulop factor
    (54) factor -> . LPAREN expression RPAREN
    (55) factor -> . var
    (56) factor -> . funcCallExpr
    (57) factor -> . INT_LITERAL
    (58) factor -> . CHAR_LITERAL
    (59) factor -> . STRING_LITERAL
    (60) funcCallExpr -> . IDENTIFIER LPAREN argList RPAREN

    RBRACE          reduce using rule 64 (empty -> .)
    LBRACE          shift and go to state 53
    IF              shift and go to state 51
    ELSE            shift and go to state 47
    WHILE           shift and go to state 38
    RETURN          shift and go to state 35
    IDENTIFIER      shift and go to state 45
    LPAREN          shift and go to state 48
    INT_LITERAL     shift and go to state 57
    CHAR_LITERAL    shift and go to state 54
    STRING_LITERAL  shift and go to state 36

    term                           shift and go to state 52
    statementList                  shift and go to state 41
    assignStmt                     shift and go to state 56
    loopStmt                       shift and go to state 37
    condStmt                       shift and go to state 55
    funcCallExpr                   shift and go to state 39
    statement                      shift and go to state 42
    factor                         shift and go to state 43
    var                            shift and go to state 44
    returnStmt                     shift and go to state 49
    addExpr                        shift and go to state 40
    expression                     shift and go to state 58
    compoundStmt                   shift and go to state 50
    empty                          shift and go to state 46

state 31

    (20) localDeclList -> varDecl . localDeclList
    (19) localDeclList -> . empty
    (20) localDeclList -> . varDecl localDeclList
    (64) empty -> .
    (6) varDecl -> . typeSpecifier IDENTIFIER LBRACKET INT_LITERAL RBRACKET SEMICOLON
    (7) varDecl -> . typeSpecifier IDENTIFIER SEMICOLON
    (8) typeSpecifier -> . INT
    (9) typeSpecifier -> . CHAR
    (10) typeSpecifier -> . VOID
    (11) typeSpecifier -> . STRING

    LBRACE          reduce using rule 64 (empty -> .)
    IF              reduce using rule 64 (empty -> .)
    ELSE            reduce using rule 64 (empty -> .)
    WHILE           reduce using rule 64 (empty -> .)
    RETURN          reduce using rule 64 (empty -> .)
    IDENTIFIER      reduce using rule 64 (empty -> .)
    LPAREN          reduce using rule 64 (empty -> .)
    INT_LITERAL     reduce using rule 64 (empty -> .)
    CHAR_LITERAL    reduce using rule 64 (empty -> .)
    STRING_LITERAL  reduce using rule 64 (empty -> .)
    RBRACE          reduce using rule 64 (empty -> .)
    INT             shift and go to state 5
    CHAR            shift and go to state 2
    VOID            shift and go to state 7
    STRING          shift and go to state 4

    localDeclList                  shift and go to state 59
    varDecl                        shift and go to state 31
    typeSpecifier                  shift and go to state 32
    empty                          shift and go to state 33

state 32

    (6) varDecl -> typeSpecifier . IDENTIFIER LBRACKET INT_LITERAL RBRACKET SEMICOLON
    (7) varDecl -> typeSpecifier . IDENTIFIER SEMICOLON

    IDENTIFIER      shift and go to state 60


state 33

    (19) localDeclList -> empty .

    LBRACE          reduce using rule 19 (localDeclList -> empty .)
    IF              reduce using rule 19 (localDeclList -> empty .)
    ELSE            reduce using rule 19 (localDeclList -> empty .)
    WHILE           reduce using rule 19 (localDeclList -> empty .)
    RETURN          reduce using rule 19 (localDeclList -> empty .)
    IDENTIFIER      reduce using rule 19 (localDeclList -> empty .)
    LPAREN          reduce using rule 19 (localDeclList -> empty .)
    INT_LITERAL     reduce using rule 19 (localDeclList -> empty .)
    CHAR_LITERAL    reduce using rule 19 (localDeclList -> empty .)
    STRING_LITERAL  reduce using rule 19 (localDeclList -> empty .)
    RBRACE          reduce using rule 19 (localDeclList -> empty .)


state 34

    (17) formalDecl -> typeSpecifier IDENTIFIER LBRACKET RBRACKET .

    COMMA           reduce using rule 17 (formalDecl -> typeSpecifier IDENTIFIER LBRACKET RBRACKET .)
    RPAREN          reduce using rule 17 (formalDecl -> typeSpecifier IDENTIFIER LBRACKET RBRACKET .)


state 35

    (34) returnStmt -> RETURN . SEMICOLON
    (35) returnStmt -> RETURN . expression SEMICOLON
    (38) expression -> . addExpr
    (39) expression -> . expression relop addExpr
    (46) addExpr -> . term
    (47) addExpr -> . addExpr addop term
    (50) term -> . factor
    (51) term -> . term mulop factor
    (54) factor -> . LPAREN expression RPAREN
    (55) factor -> . var
    (56) factor -> . funcCallExpr
    (57) factor -> . INT_LITERAL
    (58) factor -> . CHAR_LITERAL
    (59) factor -> . STRING_LITERAL
    (36) var -> . IDENTIFIER
    (37) var -> . IDENTIFIER LBRACKET addExpr RBRACKET
    (60) funcCallExpr -> . IDENTIFIER LPAREN argList RPAREN

    SEMICOLON       shift and go to state 61
    LPAREN          shift and go to state 48
    INT_LITERAL     shift and go to state 57
    CHAR_LITERAL    shift and go to state 54
    STRING_LITERAL  shift and go to state 36
    IDENTIFIER      shift and go to state 45

    term                           shift and go to state 52
    addExpr                        shift and go to state 40
    funcCallExpr                   shift and go to state 39
    factor                         shift and go to state 43
    var                            shift and go to state 62
    expression                     shift and go to state 63

state 36

    (59) factor -> STRING_LITERAL .

    MULTIPLY        reduce using rule 59 (factor -> STRING_LITERAL .)
    DIVIDE          reduce using rule 59 (factor -> STRING_LITERAL .)
    PLUS            reduce using rule 59 (factor -> STRING_LITERAL .)
    MINUS           reduce using rule 59 (factor -> STRING_LITERAL .)
    SEMICOLON       reduce using rule 59 (factor -> STRING_LITERAL .)
    LTE             reduce using rule 59 (factor -> STRING_LITERAL .)
    LESS            reduce using rule 59 (factor -> STRING_LITERAL .)
    EQ              reduce using rule 59 (factor -> STRING_LITERAL .)
    GREATER         reduce using rule 59 (factor -> STRING_LITERAL .)
    GTE             reduce using rule 59 (factor -> STRING_LITERAL .)
    NEQ             reduce using rule 59 (factor -> STRING_LITERAL .)
    RBRACKET        reduce using rule 59 (factor -> STRING_LITERAL .)
    RPAREN          reduce using rule 59 (factor -> STRING_LITERAL .)
    COMMA           reduce using rule 59 (factor -> STRING_LITERAL .)


state 37

    (26) statement -> loopStmt .

    LBRACE          reduce using rule 26 (statement -> loopStmt .)
    IF              reduce using rule 26 (statement -> loopStmt .)
    ELSE            reduce using rule 26 (statement -> loopStmt .)
    WHILE           reduce using rule 26 (statement -> loopStmt .)
    RETURN          reduce using rule 26 (statement -> loopStmt .)
    IDENTIFIER      reduce using rule 26 (statement -> loopStmt .)
    LPAREN          reduce using rule 26 (statement -> loopStmt .)
    INT_LITERAL     reduce using rule 26 (statement -> loopStmt .)
    CHAR_LITERAL    reduce using rule 26 (statement -> loopStmt .)
    STRING_LITERAL  reduce using rule 26 (statement -> loopStmt .)
    RBRACE          reduce using rule 26 (statement -> loopStmt .)


state 38

    (33) loopStmt -> WHILE . LPAREN expression RPAREN statement

    LPAREN          shift and go to state 64


state 39

    (56) factor -> funcCallExpr .

    MULTIPLY        reduce using rule 56 (factor -> funcCallExpr .)
    DIVIDE          reduce using rule 56 (factor -> funcCallExpr .)
    PLUS            reduce using rule 56 (factor -> funcCallExpr .)
    MINUS           reduce using rule 56 (factor -> funcCallExpr .)
    SEMICOLON       reduce using rule 56 (factor -> funcCallExpr .)
    LTE             reduce using rule 56 (factor -> funcCallExpr .)
    LESS            reduce using rule 56 (factor -> funcCallExpr .)
    EQ              reduce using rule 56 (factor -> funcCallExpr .)
    GREATER         reduce using rule 56 (factor -> funcCallExpr .)
    GTE             reduce using rule 56 (factor -> funcCallExpr .)
    NEQ             reduce using rule 56 (factor -> funcCallExpr .)
    RBRACKET        reduce using rule 56 (factor -> funcCallExpr .)
    RPAREN          reduce using rule 56 (factor -> funcCallExpr .)
    COMMA           reduce using rule 56 (factor -> funcCallExpr .)


state 40

    (38) expression -> addExpr .
    (47) addExpr -> addExpr . addop term
    (48) addop -> . PLUS
    (49) addop -> . MINUS

    SEMICOLON       reduce using rule 38 (expression -> addExpr .)
    LTE             reduce using rule 38 (expression -> addExpr .)
    LESS            reduce using rule 38 (expression -> addExpr .)
    EQ              reduce using rule 38 (expression -> addExpr .)
    GREATER         reduce using rule 38 (expression -> addExpr .)
    GTE             reduce using rule 38 (expression -> addExpr .)
    NEQ             reduce using rule 38 (expression -> addExpr .)
    RPAREN          reduce using rule 38 (expression -> addExpr .)
    COMMA           reduce using rule 38 (expression -> addExpr .)
    PLUS            shift and go to state 66
    MINUS           shift and go to state 67

    addop                          shift and go to state 65

state 41

    (18) funBody -> LBRACE localDeclList statementList . RBRACE

    RBRACE          shift and go to state 68


state 42

    (22) statementList -> statement . statementList
    (21) statementList -> . empty
    (22) statementList -> . statement statementList
    (64) empty -> .
    (23) statement -> . compoundStmt
    (24) statement -> . assignStmt
    (25) statement -> . condStmt
    (26) statement -> . loopStmt
    (27) statement -> . returnStmt
    (28) compoundStmt -> . LBRACE statementList RBRACE
    (29) assignStmt -> . var ASSIGN expression SEMICOLON
    (30) assignStmt -> . expression SEMICOLON
    (31) condStmt -> . IF LPAREN expression RPAREN statement
    (32) condStmt -> . ELSE statement
    (33) loopStmt -> . WHILE LPAREN expression RPAREN statement
    (34) returnStmt -> . RETURN SEMICOLON
    (35) returnStmt -> . RETURN expression SEMICOLON
    (36) var -> . IDENTIFIER
    (37) var -> . IDENTIFIER LBRACKET addExpr RBRACKET
    (38) expression -> . addExpr
    (39) expression -> . expression relop addExpr
    (46) addExpr -> . term
    (47) addExpr -> . addExpr addop term
    (50) term -> . factor
    (51) term -> . term mulop factor
    (54) factor -> . LPAREN expression RPAREN
    (55) factor -> . var
    (56) factor -> . funcCallExpr
    (57) factor -> . INT_LITERAL
    (58) factor -> . CHAR_LITERAL
    (59) factor -> . STRING_LITERAL
    (60) funcCallExpr -> . IDENTIFIER LPAREN argList RPAREN

    RBRACE          reduce using rule 64 (empty -> .)
    LBRACE          shift and go to state 53
    IF              shift and go to state 51
    ELSE            shift and go to state 47
    WHILE           shift and go to state 38
    RETURN          shift and go to state 35
    IDENTIFIER      shift and go to state 45
    LPAREN          shift and go to state 48
    INT_LITERAL     shift and go to state 57
    CHAR_LITERAL    shift and go to state 54
    STRING_LITERAL  shift and go to state 36

    term                           shift and go to state 52
    statementList                  shift and go to state 69
    assignStmt                     shift and go to state 56
    loopStmt                       shift and go to state 37
    condStmt                       shift and go to state 55
    funcCallExpr                   shift and go to state 39
    statement                      shift and go to state 42
    factor                         shift and go to state 43
    var                            shift and go to state 44
    returnStmt                     shift and go to state 49
    addExpr                        shift and go to state 40
    expression                     shift and go to state 58
    compoundStmt                   shift and go to state 50
    empty                          shift and go to state 46

state 43

    (50) term -> factor .

    MULTIPLY        reduce using rule 50 (term -> factor .)
    DIVIDE          reduce using rule 50 (term -> factor .)
    PLUS            reduce using rule 50 (term -> factor .)
    MINUS           reduce using rule 50 (term -> factor .)
    SEMICOLON       reduce using rule 50 (term -> factor .)
    LTE             reduce using rule 50 (term -> factor .)
    LESS            reduce using rule 50 (term -> factor .)
    EQ              reduce using rule 50 (term -> factor .)
    GREATER         reduce using rule 50 (term -> factor .)
    GTE             reduce using rule 50 (term -> factor .)
    NEQ             reduce using rule 50 (term -> factor .)
    COMMA           reduce using rule 50 (term -> factor .)
    RPAREN          reduce using rule 50 (term -> factor .)
    RBRACKET        reduce using rule 50 (term -> factor .)


state 44

    (29) assignStmt -> var . ASSIGN expression SEMICOLON
    (55) factor -> var .

    ASSIGN          shift and go to state 70
    MULTIPLY        reduce using rule 55 (factor -> var .)
    DIVIDE          reduce using rule 55 (factor -> var .)
    PLUS            reduce using rule 55 (factor -> var .)
    MINUS           reduce using rule 55 (factor -> var .)
    SEMICOLON       reduce using rule 55 (factor -> var .)
    LTE             reduce using rule 55 (factor -> var .)
    LESS            reduce using rule 55 (factor -> var .)
    EQ              reduce using rule 55 (factor -> var .)
    GREATER         reduce using rule 55 (factor -> var .)
    GTE             reduce using rule 55 (factor -> var .)
